Mon May 12 01:16:12 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - packaging/debian/Makefile.am: removed entries for files which do not exist
   in SVN.

Mon May 12 01:09:30 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - packaging/debian/Makefile.am: reformatted

Sun May 11 17:24:33 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - m4/nut_check_libhal.m4: Fix syntax error (introduced in rev 1485) that was
   causing configure to fail.

Wed May  7 15:35:06 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - m4/nut_check_libhal.m4: prepare for the hal.pc improvements.

Wed May  7 12:32:12 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - drivers/main-hal.c: fix the calls to dbus_send_reply
   (reported by Stanislav Brabec, SuSE)

Wed May  7 11:01:06 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 * Synchronisation with (backport from) the Testing branch:
   - clients/Makefile.am: fix the use of libupsclient [r1474]
   - packaging/debian: synchronize with the official package and update
     according to the many changes in 2.2.2. For more information, refer to
     packaging/debian/changelog [r1457]
   - NEWS, UPGRADING: backport of the Testing versions
   - ChangeLog: trimmed everything previous to 2.2.0
 
Tue May  6 03:20:07 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - m4/nut_check_libhal.m4: fix printing of default Callout directory.

Tue May  6 02:38:20 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - m4/nut_check_libhal.m4: default to ${libdir}/hal, since ${libdir} might not
   point to /usr/lib/hal when running e.g. make distcheck.

Tue May  6 02:35:09 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - configure.in: tell autoconf to generate packaging/mandriva/nut.spec

Sun May  4 12:43:56 UTC 2008 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - data/driver.list: added two models supported by megatec
 - drivers/megatec.c: don't show a temp reading if it's clearly bogus
