@@ -1,3 +1,8 @@
+Mon May 12 03:12:19 UTC 2008 / Charles Lepple <clepple@gmail.com>
+
+ - clients/nut_ctypes.py: Experimenting with a Python ctypes interface to
+   libupsclient.
+
 Mon May 12 01:16:12 UTC 2008 / Charles Lepple <clepple@gmail.com>
 
  - packaging/debian/Makefile.am: removed entries for files which do not exist
